--- a/src/app/shared/components/language-switcher/language-switcher.html
+++ b/src/app/shared/components/language-switcher/language-switcher.html
@@ -1,7 +1,24 @@
+<!-- Botón desktop -->
+<button
+  mat-button
+  [matMenuTriggerFor]="languageMenu"
+  class="language-button hide-xs"
+  aria-label="Select language"
+>
+  <mat-icon class="language-icon">language</mat-icon>
+  <div class="language-info">
+    <span class="language-label">Idioma</span>
+    <span class="language-current">{{
+      languageService.currentLanguageOption()?.name ?? 'Español'
+    }}</span>
+  </div>
+</button>
+
+<!-- Botón mobile -->
 <button
   mat-icon-button
   [matMenuTriggerFor]="languageMenu"
-  class="language-button"
+  class="language-button-mobile hide-gt-xs"
   aria-label="Select language"
 >
   <mat-icon>language</mat-icon>
